--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,6 +1,14 @@
 name: Python CI
 
-on: [push]
+on:
+  push:
+    branches:
+      - main
+      - release*
+      - hotfix*
+      - '*'
+    tags:
+      - v*
 
 jobs:
   tests:
